--- a/ShoppingProject/templates/boath.html
+++ b/ShoppingProject/templates/boath.html
@@ -30,17 +30,14 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
 {% include 'nabs.html' %}
 </div>
 <br><br><br>
-
-<!-- /hero area-->
-<div align="left" class="images">
-    <div id="zoom-in">
-
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'clgbags' %}"><img src="{% static 'images/bags/clg babgs/c8509832538dc888687de0806dd25edc.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> <b>College Bags</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'backpack' %}" ><img src="{% static 'images/bags/backpacks/c65acca995a6bcaddbaded559b7ca229.jpg' %}"  style="border-radius: 0.8cm;width:70px;height: 70px">&nbsp;&nbsp; <b>Backpacks</b></a>  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'h_bags' %}"> <img src="{% static 'images/bags/hs3.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> &nbsp;&nbsp;`<b>Hand bags</b></a>
+<div align="left">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'bags' %}" ><img src="{% static 'images/bags/bag4.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px">&nbsp;&nbsp;<b>Bags</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'shoe' %}" ><img src="{% static 'images/categories/shoe 2.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> &nbsp;&nbsp;<b>Shoes</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'watches' %}" ><img src="{% static 'images/watches/watch5.jpeg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> &nbsp;&nbsp;<b>Watches</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'goggules' %}" ><img src="{% static 'images/speticuls/sp18.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> &nbsp;&nbsp;<b>Speticuls</b></a>&nbsp;&nbsp;&nbsp;&nbsp;
 
 </div>
-<pre>
+  <br>
+  <br><br>
+<!-- /hero area-->
 
-</pre>
 
 <! -- /categories-->
 <section class="section">
@@ -127,36 +124,80 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
 <!-- /categories -->
 
 
+<!-- /deal -->
 
-<!-- service -->
- <pre>
+  <div align="left">
+      <div class="col-lg-12 text-left">
+        <h2 class="section-title">Top Categories For WoMen</h2>
+      </div><br>
 
-
-
-</pre>
-<section class="section bg-gray">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-title">Our Newsletter</h2>
-        <p class="mb-4">Subscribe to our Newsletter to receive early discount offers</p>
+      <div class="row">
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
+            <div class="instagram-post mx-2"><a href="{% url 'women_menu' %}" ><img class="img-fluid w-100" src="/static/images/instagram/item-1.png" alt="instagram-image"></a>
+            <ul class="list-inline text-center">
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
+          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-2.png" alt="instagram-image">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
+          <div class="instagram-post mx-2"><img class="img-fluid w-100"   src="{% static 'images/ksssssssssssssss.jpg' %}" alt="instagram-image">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
+          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-4.png" alt="instagram-image">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
+          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-5.png" alt="instagram-image">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6 px-0 mb-4">
+          <div class="instagram-post mx-2"><img class="img-fluid w-100" src="/static/images/instagram/item-6.png" alt="instagram-image">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+              <li class="list-inline-item"><a href="%7b%7blink%7d%7d.html" target="_blank" class="text-white"></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="col-lg-6 col-md-8 col-sm-9 col-10 mx-auto">
-        <form action="#" class="d-flex flex-column flex-sm-row">
-          <input type="email" class="form-control rounded-0 border-0 mr-3 mb-4 mb-sm-0" id="mail" placeholder="Enter your email">
-          <button type="submit" value="send" class="btn btn-primary">Subscribe</button>
-        </form>
-      </div>
-    </div>
+      <!-- /without instagram image -->
   </div>
 </section>
-<pre>
+<!-- /instagram -->
 
-</pre>
-          <!-- //end of product -->
-          <!-- product -->
+<!-- service -->
+  <br>
+
+<!-- /newsletter -->
+
+<!-- Newsletter Modal -->
+
+<!-- /Newsletter Modal -->
 
 
+<!-- footer -->
+  <br>
 <footer class="bg-light">
   <div class="section">
     <div class="container">
@@ -228,19 +269,10 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
     </div>
   </div>
 </footer>
+
+<!-- /footer -->
+
 </div>
-
-
-
-<!-- /newsletter -->
-
-<!-- Newsletter Modal -->
-
-<!-- /Newsletter Modal -->
-
-
-<!-- footer -->
-
 
 
 
