--- a/ShoppingProject/templates/index.html
+++ b/ShoppingProject/templates/index.html
@@ -29,11 +29,11 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
 <div >
     {% include 'nabs.html' %}
 </div>
-
+<br><br>
 <!-- /hero area-->
 <div align="left" >
     <h3 style="font-family: 'Tempus Sans ITC';color: black"><b>Who We Are...!!</b></h3><br>
-    <p style="font-family: 'French Script MT';font-size: 30px;color: red" >Quick Shoppiee is a Hyderabad e-commerce company headquartered in<br><br>  Hyderbad & Vizag, Ts & Ap, India.The company initially focused <br><br> on Clothing, before expanding into other product categories such as Formals,<br><br> Suites, Men & Ladies Kurthas , Sariees,Ladies Dresses,Shoes,Bags,Watches, and lifestyle products.</p>
+    <p style="font-family: 'French Script MT';font-size: 30px;color: red" >&nbsp;&nbsp;&nbsp;Quick Shoppiee is a Hyderabad e-commerce company headquartered in<br><br> &nbsp;&nbsp;&nbsp; Hyderbad & Vizag, Ts & Ap, India.The company initially focused <br><br> &nbsp;&nbsp;&nbsp;on Clothing, before expanding into other product categories such as Formals,<br><br>&nbsp;&nbsp;&nbsp; Suites, Men & Ladies Kurthas , Sariees,Ladies Dresses,Shoes,Bags,Watches, and lifestyle products.</p>
 </div>
 
 
@@ -229,7 +229,7 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
         <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
           <i class="ti-truck icon-lg mr-4 mb-3 mb-sm-0"></i>
           <div class="text-center text-sm-left">
-            <h4>Free Shipping</h4>
+            <h4><img src="{% static 'delivery-truck.png' %}" width="50px" height="50px">&nbsp;&nbsp;Free Shipping</h4>
             <p class="mb-0 text-gray">Free shipping on oder over $70</p>
           </div>
         </div>
@@ -239,7 +239,7 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
         <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
           <i class="ti-shield icon-lg mr-4 mb-3 mb-sm-0"></i>
           <div class="text-center text-sm-left">
-            <h4>Secure Payment</h4>
+            <h4><img src="{% static 'secure-payment.png' %}" width="50px" height="50px">&nbsp;&nbsp;Secure Payment</h4>
             <p class="mb-0 text-gray">We ensure secure payment with PEV</p>
           </div>
         </div>
@@ -249,7 +249,7 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
         <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
           <i class="ti-timer icon-lg mr-4 mb-3 mb-sm-0"></i>
           <div class="text-center text-sm-left">
-            <h4>Support 24/7</h4>
+            <h4><img src="{% static 'clock.png' %}" width="50px" height="50px">&nbsp;&nbsp;Support 24/7</h4>
             <p class="mb-0 text-gray">Contact us 24 hours a day, 7 days a week</p>
           </div>
         </div>
@@ -259,7 +259,7 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
         <div class="d-flex flex-sm-row flex-column align-items-center align-items-sm-start">
           <i class="ti-reload icon-lg mr-4 mb-3 mb-sm-0"></i>
           <div class="text-center text-sm-left">
-            <h4>30 Days Return</h4>
+            <h4><img src="{% static 'return.png' %}" width="50px" height="50px">&nbsp;&nbsp;30 Days Return</h4>
             <p class="mb-0 text-gray">Simply return it within 30 days for an exchange.</p>
           </div>
         </div>
