--- a/ShoppingProject/templates/nabs.html
+++ b/ShoppingProject/templates/nabs.html
@@ -21,16 +21,12 @@
 
            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="nav-link active" href="{% url 'home' %}" style="color:green">Home</a>
                <a class="nav-link" href="{% url 'categires' %}" style="color: green">Categires</a>
-
+<a class="nav-link" href="{% url 'menu' %}" style="color:green">Menu</a>
                    <a class="nav-link" href="" style="color:green">About Q-S-S</a>
 
         <a class="nav-link " href="" style="color:green">Login/SignUp</a>
              </nav>
-    <hr>
-<pre>
 
-
-</pre>
 
 
 
