--- a/ShoppingProject/templates/shirts.html
+++ b/ShoppingProject/templates/shirts.html
@@ -34,6 +34,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'categires' %}">Categireis</a></li>
       <li class="breadcrumb-item active" aria-current="page">Shirts</li>
     </ol>
   </div>
