--- a/ShoppingProject/templates/buy_product.html
+++ b/ShoppingProject/templates/buy_product.html
@@ -1,5 +1,8 @@
 
-{%  load static %}
+
+
+{% load static %}
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -9,10 +12,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Quick Shoppie</title>
-      <link href="{% static 'style.css' %}" rel="stylesheet">
+    <title>Doctor Dentals</title>
+           <link href="{% static 'style.css' %}" rel="stylesheet">
   </head>
-     <style >
+       <style >
 body{
     border-top: solid 5px #999;
 
@@ -24,112 +27,71 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
 
 }
       </style>
-  <body >
-  <br>
-<div >
+  <body  >
+
+
+
+  <div >
 {% include 'nabs.html' %}
 </div>
-<br><br><br>
+    <hr>
 
-<!-- /hero area-->
-<div align="left" class="images">
-    <div id="zoom-in">
 
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'clgbags' %}"><img src="{% static 'images/bags/clg babgs/c8509832538dc888687de0806dd25edc.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> <b>College Bags</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'backpack' %}" ><img src="{% static 'images/bags/backpacks/c65acca995a6bcaddbaded559b7ca229.jpg' %}"  style="border-radius: 0.8cm;width:70px;height: 70px">&nbsp;&nbsp; <b>Backpacks</b></a>  &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <a href="{% url 'h_bags' %}"> <img src="{% static 'images/bags/hs3.jpg' %}" style="border-radius: 0.8cm;width:70px;height: 70px"> &nbsp;&nbsp;`<b>Hand bags</b></a>
 
-</div>
-<pre>
+<!-- main wrapper -->
+<div class="main-wrapper">
 
-</pre>
-
-<! -- /categories-->
-<section class="section">
+<!-- breadcrumb -->
+<nav class="bg-gray py-3">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-12 text-left">
-        <h2 class="section-title">Top Categories For For Men </h2>
-      </div><br><br><br>
-      <!-- categories item -->
-      <div class="col-lg-4 col-md-6 mb-50">
-        <div class="card p-0">
-          <div class="border-bottom text-center hover-zoom-img">
-            <a href="{% url 'shirts' %}"><img src="{% static 'images/categories/pexels-photo-1337477.jpeg' %}" class="rounded-top img-fluid w-100" alt="product-img"></a>
-          </div>
-          <ul class="d-flex list-unstyled pl-0 categories-list">
-            <li class="m-0 hover-zoom-img">
-              <a href="{% url 'shirts' %}"><img src="{% static 'images/categories/3shirt.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-            <li class="m-0 hover-zoom-img">
-              <a href="{% url 'shirts' %}"><img src="{% static 'images/categories/1shirt.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-            <li class="m-0 hover-zoom-img">
-              <a href="{% url 'shirts' %}"><img src="{% static 'images/categories/2 shirt.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-          </ul>
-          <div class="px-4 py-3 border-top">
-            <h4 class="d-inline-block mb-0 mt-1">Clothing</h4>
-            <a href="{% url 'shirts' %}" class="btn btn-sm btn-outline-primary float-right">view more</a>
-          </div>
-        </div>
-      </div>
-      <!-- categories item -->
-      <div class="col-lg-4 col-md-6 mb-50">
-        <div class="card p-0">
-          <div class="border-bottom text-center hover-zoom-img">
-           <a href="{% url 'shoe' %}" ><img src="/static/images/categories/product-big-2.jpg" class="rounded-top img-fluid w-100" alt="product-img">
-           </a></div>
-          <ul class="d-flex list-unstyled pl-0 categories-list">
-            <li class="m-0 hover-zoom-img">
-              <a href="{% url 'shoe' %}" ><img src="{% static 'images/categories/shoe 2.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-            <li class="m-0 hover-zoom-img">
-              <a href="{% url 'shoe' %}" ><img src="{% static 'images/categories/shoe 3.png' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-            <li class="m-0 hover-zoom-img">
-              <a href="{% url 'shoe' %}" ><img src="{% static 'images/categories/shoes1.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-          </ul>
-          <div class="px-4 py-3 border-top">
-            <h4 class="d-inline-block mb-0 mt-1">Shoes</h4>
-            <a  href="{% url 'shoe' %}" class="btn btn-sm btn-outline-primary float-right">view more</a>
-          <pre>
-          </pre>
-          </div>
-        </div>
-      </div>
-      <!-- categories item -->
-      <div class="col-lg-4 col-md-6 mb-50">
-        <div class="card p-0">
-          <div class="border-bottom text-center hover-zoom-img">
-            <a href="{%  url 'bags' %}"><img src="{% static 'images/bags/bag9.jpg' %}" class="rounded-top img-fluid w-100" alt="product-img"></a>
-          </div>
-          <ul class="d-flex list-unstyled pl-0 categories-list">
-            <li class="m-0 hover-zoom-img">
-              <a href="{%  url 'bags' %}"><img src="/static/images/categories/product-sm-7.jpg" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-            <li class="m-0 hover-zoom-img">
-              <a href="{%  url 'watches' %}"><img src="{% static 'images/bags/bag2.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-            <li class="m-0 hover-zoom-img">
-             <a href="{%  url 'goggules' %}"> <img src="{% static 'images/bags/bag14.jpg' %}" class="img-fluid w-100" alt="product-img"></a>
-            </li>
-          </ul>
-          <div class="px-4 py-3 border-top">
-            <h4 class="d-inline-block mb-0 mt-1">Accessories</h4>
-            <a href="{% url 'bags' %}" class="btn btn-sm btn-outline-primary float-right">view more</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'categires' %}">Categireis</a></li>
+      <li class="breadcrumb-item active" aria-current="page">{% for res in res %}{{  res.product_categire }} {% endfor %}</li>
+    </ol>
   </div>
-</section>
-
-<!-- /categories -->
-
+</nav>
+<!-- /breadcrumb -->
 
 
-<!-- service -->
- <pre>
+<!-- shop -->
+ <!-- product-list -->
+
+<pre>
+</pre>
+ {% for res in res %}
+<table align="center">
+    <tr>
+        <th>
+
+             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Brand :-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="color: red;font-family: 'French Script MT';font-size: 30px">{{ res.product_name }} {{ res.product_categire }}</span> </i></b><br><br>
+           <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Price :- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="color: red;font-family: 'French Script MT';font-size: 30px"> {{ res.product_price }} Bucks</span> </i></b><br><br>
+            <b><i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Current Status :-  &nbsp;&nbsp;&nbsp; <span style="color: red;font-family: 'French Script MT';font-size: 30px">{{ res.current_status }}</span></i></b><br><br>
+             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; For  :-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="color: red;font-family: 'French Script MT';font-size: 30px"> {{ res.product_for }}</span> </i></b><br><br>
+             <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Stock Available Upto :- &nbsp;&nbsp;&nbsp;  <span style="color: red;font-family: 'French Script MT';font-size: 30px"> {{ res.valid_upto }} Years</span>  </i></b><br><br>
+                 <b><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Product Description  :- &nbsp;&nbsp;&nbsp;  <span style="color: red;font-family: 'French Script MT';font-size: 30px"> {{ res.product_description }} </span>  </i></b><br><br>
+        </th>
+        <th>
+
+ <img src="{{ res.product_image.url }}" style="border-radius: 0.9cm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        </th>
+    </tr>
+</table>
+     <pre>
+     </pre>
+     <table align="center">
+<tr >
+   <th >
+       <a href="{% url 'buy_add' %}"><button type="submit" style="color: darkgray;border-radius: 0.8cm" class="btn btn-outline-warning" >&nbsp;&nbsp;&nbsp; Add To Cart&nbsp;&nbsp;&nbsp;</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{% url 'buy_add' %}"><button type="submit" style="color: blue;border-radius: 0.8cm" class="btn btn-outline-warning" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Buy Now&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </button></a>
+
+   </th>
+</tr>
+</table>
+     {% endfor %}
+
+
+<pre>
 
 
 
@@ -229,18 +191,6 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
   </div>
 </footer>
 </div>
-
-
-
-<!-- /newsletter -->
-
-<!-- Newsletter Modal -->
-
-<!-- /Newsletter Modal -->
-
-
-<!-- footer -->
-
 
 
 
