--- a/ShoppingProject/templates/shoe.html
+++ b/ShoppingProject/templates/shoe.html
@@ -134,6 +134,106 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
 <!-- /newsletter -->
 
 <!-- Newsletter Modal -->
+ <pre>
+
+
+
+</pre>
+<section class="section bg-gray">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-title">Our Newsletter</h2>
+        <p class="mb-4">Subscribe to our Newsletter to receive early discount offers</p>
+      </div>
+      <div class="col-lg-6 col-md-8 col-sm-9 col-10 mx-auto">
+        <form action="#" class="d-flex flex-column flex-sm-row">
+          <input type="email" class="form-control rounded-0 border-0 mr-3 mb-4 mb-sm-0" id="mail" placeholder="Enter your email">
+          <button type="submit" value="send" class="btn btn-primary">Subscribe</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+<pre>
+
+</pre>
+          <!-- //end of product -->
+          <!-- product -->
+
+
+<footer class="bg-light">
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
+          <h4 class="mb-4">Contact</h4>
+          <p>20464 Hirthe Curve Suite, Emardton, CT 12471-4107</p>
+          <p>+5(305) 785-0437</p>
+          <p>info@example.com</p>
+          <ul class="list-inline social-icons">
+            <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="ti-vimeo-alt"></i></a></li>
+            <li class="list-inline-item"><a href="#"><i class="ti-google"></i></a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
+          <h4 class="mb-4">Category</h4>
+          <ul class="pl-0 list-unstyled">
+            <li class="mb-2"><a class="text-color" href="shop.html">Men</a></li>
+            <li class="mb-2"><a class="text-color" href="shop.html">Women</a></li>
+            <li class="mb-2"><a class="text-color" href="shop.html">Kids</a></li>
+            <li class="mb-2"><a class="text-color" href="shop.html">Accessories</a></li>
+            <li class="mb-2"><a class="text-color" href="shop.html">Shoe</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
+          <h4 class="mb-4">Useful Link</h4>
+          <ul class="pl-0 list-unstyled">
+            <li class="mb-2"><a class="text-color" href="about.html">News &amp; Tips</a></li>
+            <li class="mb-2"><a class="text-color" href="about.html">About Us</a></li>
+            <li class="mb-2"><a class="text-color" href="address.html">Support</a></li>
+            <li class="mb-2"><a class="text-color" href="shop.html">Our Shop</a></li>
+            <li class="mb-2"><a class="text-color" href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6 text-center text-sm-left">
+          <h4 class="mb-4">Our Policies</h4>
+          <ul class="pl-0 list-unstyled">
+            <li class="mb-2"><a class="text-color" href="404.html">Privacy Policy</a></li>
+            <li class="mb-2"><a class="text-color" href="404.html">Terms &amp; Conditions</a></li>
+            <li class="mb-2"><a class="text-color" href="404.html">Cookie Policy</a></li>
+            <li class="mb-2"><a class="text-color" href="404.html">Terms of Sale</a></li>
+            <li class="mb-2"><a class="text-color" href="dashboard.html">Free Shipping &amp; Returns</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+    <br>
+  <div class="bg-dark py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 text-center text-md-left mb-4 mb-md-0 align-self-center">
+          <p class="text-white mb-0">Logo © 2018 all right reserved</p>
+        </div>
+        <div class="col-md-2 text-center text-md-left mb-4 mb-md-0">
+          <img src="/static/images/logo-alt.png" alt="logo">
+        </div>
+        <div class="col-md-5 text-center text-md-right mb-4 mb-md-0">
+          <ul class="list-inline">
+            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-1.jpg" alt="card"></li>
+            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-2.jpg" alt="card"></li>
+            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-3.jpg" alt="card"></li>
+            <li class="list-inline-item"><img class="img-fluid rounded atm-card-img" src="/static/images/payment-card/card-4.jpg" alt="card"></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+</div>
 
 <!-- /Newsletter Modal -->
 
