--- a/ShoppingProject/templates/formen.html
+++ b/ShoppingProject/templates/formen.html
@@ -34,7 +34,7 @@ background:url({% static 'shopping.jpg' %}) no-repeat center center fixed ;
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-12 text-center">
-        <h2 class="section-title"><span style="color: black">Top Categories For For Men</span>  </h2>
+        <h2 class="section-title"><span style="color: black">Top Categories For Men</span>  </h2>
       </div><br><br><br>
       <!-- categories item -->
       <div class="col-lg-4 col-md-6 mb-50">
