--- a/ShoppingProject/templates/login_signin.html
+++ b/ShoppingProject/templates/login_signin.html
@@ -77,18 +77,11 @@
             <a class="dropdown-item" href="{% url 'goggules' %}">Speticles</a>
 
         </div>
+
+
       </li>
-          {% if not request.user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'login_signin' %}" tabindex="-1" >Login/Signup</a>
-      </li>
-      {% else %}
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >Logout</a>
-      </li>
-        {% endif %}
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >{{ request.user.username }}</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -97,6 +90,41 @@
     </form>
   </div>
 </nav>
+
+<pre>
+
+    <section class="signin-page account">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="block text-center">
+          <a class="logo" href="">
+            <img src="{% static 'images/logo.png' %}" alt="logo">
+          </a>
+          <h2 class="text-center">Welcome Back</h2>
+            {% if error %}
+            <p style="color: #ff5f2a">Either username or password is incorrect</p>
+            {% endif %}
+          <form class="text-left clearfix" action="" method="post" >
+            {% csrf_token %}
+            <div class="form-group">
+              <input type="text" class="form-control" name="user"  placeholder="UserName">
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" name="pwd" placeholder="Password">
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary" >Login</button>
+            </div>
+          </form>
+          <p class="mt-3">New in this site ?<a href="{% url 'signup' %}"> Create New Account</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+</pre>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
