--- a/ShoppingProject/templates/signup.html
+++ b/ShoppingProject/templates/signup.html
@@ -77,18 +77,11 @@
             <a class="dropdown-item" href="{% url 'goggules' %}">Speticles</a>
 
         </div>
+
+
       </li>
-          {% if not request.user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'login_signin' %}" tabindex="-1" >Login/Signup</a>
-      </li>
-      {% else %}
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >Logout</a>
-      </li>
-        {% endif %}
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" >{{ request.user.username }}</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -97,6 +90,57 @@
     </form>
   </div>
 </nav>
+
+<pre>
+
+
+</pre>
+<section class="signin-page account">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="block text-center">
+          <a class="logo" href="">
+            <img src="{% static 'images/logo.png' %}" alt="logo">
+          </a>
+              {% if error %}
+            <p style="color: #ff5f2a">Username is Already Exist...Lets Try With An Another Username</p>
+            {% endif %}
+
+
+          <form class="text-left clearfix" action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+
+
+             <div class="form-group">
+              <input type="text" class="form-control" required name="mob" placeholder="Mobile">
+            </div>
+             <div class="form-group">
+              <input type="file"  required name="img">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control"   required name="user" placeholder="Username">
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" required name="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control"  required name="pwd"  placeholder="Password">
+            </div>
+            <div class="form-group">
+             <textarea name="add" placeholder="Your Address"  required class="form-control"></textarea>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary">Sign In</button>
+            </div>
+          </form>
+          <p class="mt-3">Already hava an account ?<a href="{% url 'login_signin' %}"> Login</a></p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
